objects/Validation_Rule_Permissions__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Stream_TP_1_Scheduled_Call_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Profile/ User will bypass the Validation Rule(s) for scheduling Lead Stream Touch Plan 1 Cases</description>
        <label>Lead Stream TP 1 Scheduled Call Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Stream_TP_2_Scheduled_Call_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Profile/ User will bypass the Validation Rule(s) for scheduling Lead Stream Touch Plan 2 Cases</description>
        <label>Lead Stream TP 2 Scheduled Call Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Stream_TP_3_Scheduled_Call_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Profile/ User will bypass the Validation Rule(s) for scheduling Lead Stream Touch Plan 3 Cases</description>
        <label>Lead Stream TP 3 Scheduled Call Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Stream_TP_Did_Not_Complete_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Profile/ User will bypass the Validation Rule(s) for being able to update the Touch Plan Cases status to 'Did Not Complete'</description>
        <label>Lead Stream TP Did Not Complete Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Permission_Summary__c</fullName>
        <description>Short summary/ description for the use of the permission</description>
        <label>Permission Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Stream_TP_1_Owner_Update_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Profile/ User will bypass the Validation Rule(s) for updating owner for Lead Stream Touch Plan Cases</description>
        <label>Lead Stream TP 1 Owner Update Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Stream_TP_From_DNC_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Profile/ User will bypass the Validation Rule(s) for being able to update the Touch Plan Cases status from 'Did Not Complete'</description>
        <label>Lead Stream TP From DNC Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Stream_TP_Churn_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the Profile/ User will bypass the Validation Rule(s) for being able to update the Touch Plan Cases status to 'Churned'</description>
        <label>Lead Stream TP Churned Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call_Status_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Do not call status on cases</description>
        <label>Do Not Call Status Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Probability_Edit_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to allow users/ profiles the ability to edit the Probability field on the Opportunity</description>
        <inlineHelpText>Used to allow users/ profiles the ability to edit the Probability field on the Opportunity</inlineHelpText>
        <label>Opportunity Probability Edit Bypass</label>
        <type>Checkbox</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>Custom Setting to keep validation rules clean and to not have to hard code Profiles and Users within a validation rule</description><enableFeeds>false</enableFeeds><label>Validation Rule Permissions</label><visibility>Public</visibility>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <columns>Lead_Stream_TP_1_Owner_Update_Bypass__c</columns>
        <columns>Lead_Stream_TP_1_Scheduled_Call_Bypass__c</columns>
        <columns>Lead_Stream_TP_2_Scheduled_Call_Bypass__c</columns>
        <columns>Lead_Stream_TP_3_Scheduled_Call_Bypass__c</columns>
        <columns>Lead_Stream_TP_Churn_Bypass__c</columns>
        <columns>Lead_Stream_TP_Did_Not_Complete_Bypass__c</columns>
        <columns>Lead_Stream_TP_From_DNC_Bypass__c</columns>
        <columns>Do_Not_Call_Status_Bypass__c</columns>
        <columns>Permission_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>